--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,45 +1,3 @@
-# server config
-server:
-  port: 8080
-# default-store in spring session. it will be set in redis only outside.
 spring:
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jyfw_test?characterEncoding=utf8
-    username: root
-    password: 123456
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-    filters: stat,wall,log4j
-    logSlowSql: true
-  #spring boot dev config
-  devtools:
-    restart:
-      enabled: true
-      additional-paths: src/main/java
-      exclude: static/**,public/**
-  #mybatis config
-  mybatis:
-    type-aliases-package: com.cnasir.server.pojo.entity
-  session:
-      store-type: none
-  #redis:
-  #  host: localhost
-  #  port: 6379
-  #  pool:
-  #    max-idle: 8
-  #    min-idle: 0
-  #    max-active: 8
-  #    max-wait: -1
-  #
+  profiles:
+    active: dev
