--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -42,12 +42,9 @@ spring:
     cache: false
   resources:
     static-locations: classpath:static/,file:static/
-  #redis:
-  #  host: localhost
-  #  port: 6379
-  #  pool:
-  #    max-idle: 8
-  #    min-idle: 0
-  #    max-active: 8
-  #    max-wait: -1
-  #
+  # 分页配置
+  pagehelper:
+    helper-dialect: mysql
+    reasonable: true
+    support-methods-arguments: true
+    params: count=countSql
