--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,12 +1,11 @@
 # server config
 server:
   port: 8080
-# default-store in spring session. it will be set in redis only outside.
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jyfw_test?characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/jyfw?characterEncoding=utf8
     username: root
     password: 123456
     initialSize: 5
@@ -23,12 +22,6 @@ spring:
     maxOpenPreparedStatements: 20
     filters: stat,wall,log4j
     logSlowSql: true
-  #spring boot dev config
-  devtools:
-      restart:
-        enabled: true
-        additional-paths: src/main/java
-        exclude: static/**,public/**
   #mybatis config
   mybatis:
     type-aliases-package: com.jyfw.jyfwser.pojo.entity
@@ -40,15 +33,15 @@ spring:
         max-file-size: 100Mb
         max-request-size: 100Mb
   # 模板引擎的配置
-    thymeleaf:
-      prefix: classpath:/templates/
-      suffix: .html
-      mode: HTML5
-      encoding: UTF-8
-      content-type: text/html
-      cache: false
-    resources:
-      static-locations: classpath:static/,file:static/
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    mode: HTML5
+    encoding: UTF-8
+    content-type: text/html
+    cache: false
+  resources:
+    static-locations: classpath:static/,file:static/
   # 分页配置
   pagehelper:
     helper-dialect: mysql
